trunk/Archive2/f0/4a08f7efd319e9/output
main.cpp: In instantiation of 'struct is_addable<void>':
main.cpp:37:63:   required from here
main.cpp:18:30: error: no matching function for call to 'is_addable<void>::check(int)'
   using type = decltype(check<T>(0));
                              ^
compilation terminated due to -Wfatal-errors.
